<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="number_of_list">List item %d</string>
    <string name="category">Category</string>
    <string name="price">$%d</string>
    <string name="description">Supporting line text lorem ipsum...</string>
    <string name="count_items">%d items in your cart</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ivanpetrov">ivanpetrov</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="cancel">Cancel</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_total">Order Total</string>
    <string name="shipping">Shipping</string>
    <string name="tax">Tax</string>
    <string name="paperclip">paperclip</string>
    <string name="vertical_dots">vertical dots</string>
    <string name="close">close</string>
    <string name="password_values">************</string>
    <string name="place_order">Place order</string>
    <string name="name">Name</string>
    <string name="ivan_petrov">Ivan Petrov</string>
    <string name="phone">Phone</string>
    <string name="my_number_phone">+1(234)567-8900</string>
    <string name="select">Select</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="my_address">123, Lenin street, Apt.6</string>
    <string name="city">City</string>
    <string name="tokyo">Tokyo</string>
    <string name="country">Country</string>
    <string name="australlia">Australlia</string>
    <string name="date">Date</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="my_note">Loves burgers and french fries</string>
    <string name="save">Save</string>
</resources>