<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/login"
        android:layout_margin="14dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/login"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/label_text"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ivanpetrov"
            android:textColor="@color/input_text"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/password"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/label_text"
        app:endIconDrawable="@drawable/white_balance_sunny"
        app:endIconMode="custom"
        style="@style/Widget.Material3.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/password_values"
            android:textColor="@color/input_text"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:textColor="@color/blue"
        android:padding="12dp"
        android:text="@string/reset_my_password"
        android:layout_margin="6dp"/>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_dark"
            android:paddingVertical="9dp"
            android:paddingHorizontal="22dp"
            android:textColor="@color/blue"
            android:text="@string/login"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_dark"
            android:paddingVertical="9dp"
            android:paddingHorizontal="22dp"
            android:layout_marginHorizontal="12dp"
            android:textColor="@color/secondary"
            android:text="@string/cancel"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>