<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_bottom"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        tools:src="@drawable/food_steak"
        android:background="@drawable/rectangle_gray"
        android:layout_marginEnd="12dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/number_of_list"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/category"
            android:padding="1dp"
            android:textColor="@color/label_text"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/description"
            android:textColor="@color/label_text"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/price"
        android:padding="4dp"
        android:textSize="18sp"
        android:textColor="@color/price"/>

</LinearLayout>