<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="16dp"
        android:background="@color/white"
        app:titleTextColor="@color/black"
        app:collapseIcon="@drawable/close_circle_outline"
        android:elevation="4dp"
        android:theme="@style/myToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewCountItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/count_items"
        app:layout_constraintTop_toBottomOf="@id/myToolbar"
        android:padding="12dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCartList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCountItems"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutPrices"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/cart_item"/>

    <LinearLayout
        android:id="@+id/linearLayoutPrices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:text="@string/order_total" />

            <TextView
                android:id="@+id/textViewOrderTotal"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="21sp"
                tools:text="$175.50"
                android:textAlignment="textEnd"
                android:textColor="@color/price" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/subtotal" />

            <TextView
                android:id="@+id/textViewSubtotal"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                tools:text="$140"
                android:textAlignment="textEnd"
                android:textColor="@color/price" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/shipping" />

            <TextView
                android:id="@+id/textViewShipping"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                tools:text="$25"
                android:textAlignment="textEnd"
                android:textColor="@color/price" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="6dp">

            <TextView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/tax" />

            <TextView
                android:id="@+id/textViewTax"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                tools:text="$10.50"
                android:textAlignment="textEnd"
                android:textColor="@color/price" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonPlaceOrder"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/emoticon_excited_outline"
            android:text="@string/place_order"
            android:backgroundTint="@color/blue"
            android:layout_marginHorizontal="130dp"
            android:textColor="@color/primary"/>

    </LinearLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>